compiling_error.txt
/Users/bmckamey/Documents/Git/ProgrammingInC/bmckamep2.c:13:5: error: cannot combine with previous 'int' declaration specifier
int int main(void)
    ^
/Users/bmckamey/Documents/Git/ProgrammingInC/bmckamep2.c:23:13: warning: missing terminating '"' character [-Winvalid-pp-token]
     printf("This program will calculate the miles per gallon for you 
            ^
/Users/bmckamey/Documents/Git/ProgrammingInC/bmckamep2.c:23:13: error: expected expression
/Users/bmckamey/Documents/Git/ProgrammingInC/bmckamep2.c:25:26: warning: missing terminating '"' character [-Winvalid-pp-token]
     and miles driven\n\n");
                         ^
/Users/bmckamey/Documents/Git/ProgrammingInC/bmckamep2.c:56:17: error: expected '}'
} /* End main */
                ^
/Users/bmckamey/Documents/Git/ProgrammingInC/bmckamep2.c:14:1: note: to match this '{'
{
^
2 warnings and 3 errors generated.
